Fixed overflowed tooltip at checkout page

--- a/web/css/layout/checkout/_address.less
+++ b/web/css/layout/checkout/_address.less
@@ -17,6 +17,10 @@
             margin: 0 !important;
             width: ~"calc(50% - @{1})";
 
+            .field-tooltip-content {
+                --dropdown-width: @40;
+            }
+
             &.choice,
             &.street {
                 width: 100%;
